update DBInitializer and GuestControllerTest